--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -4,6 +4,8 @@
 
 @import "helpers/variaveis";
 
+@import "modules/style";
+@import "modules/navbar";
 @import "modules/index";
 @import "modules/cadastro";
 @import "modules/tela-jogo";
