--- a/app/views/cadastro.ejs
+++ b/app/views/cadastro.ejs
@@ -7,7 +7,7 @@
 	
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<form action="/" class="navbar-form navbar-right">
+			<form action="/" class="navbar-form pull-right">
 				<button type="submit" class="btn btn-success">Voltar</button>				
 			</form>
 		</div>
@@ -17,60 +17,72 @@
 		<section class="page-header">
  			<h1>Cadastro de Jogador</h1>
 		</section>
-		<form action="" class="form-cadastro">
+		<% if(validacao.length > 0){ %>
+		<section class="alert alert-danger erros">
+			<h1>Atenção!</h1>
+			<hr>
+			<ul>
+				<% validacao.forEach(function(erro){ %>
+					<li><%= erro.msg %></li>
+				<% }); %>
+			</ul>
+		</section>
+		<% } %>
+
+		<form action="/cadastrar" method="POST" class="form-cadastro">
 			<div class="row">
 				<div class="col-lg-12 cadastro">
-					<input type="text" class="form-control" id="usu_nome" name="usu_nome" placeholder="Nome" required>
+					<input type="text" class="form-control" id="usu_nome" name="usu_nome" placeholder="Nome" value="<%= dados.usu_nome %>">
 				</div>
 
 				<div class="col-lg-12 cadastro">
-					<input type="text" class="form-control" id="usu_usuario" name="usu_usuario" placeholder="Usuário" required>
+					<input type="text" class="form-control" id="usu_usuario" name="usu_usuario" placeholder="Usuário" value="<%= dados.usu_usuario %>" required>
 				</div>
 
 				<div class="col-lg-12 cadastro">	
-					<input type="text" class="form-control" id="usu_senha" name="usu_senha" placeholder="Senha" required>
+					<input type="password" class="form-control" id="usu_senha" name="usu_senha" placeholder="Senha" value="<%= dados.usu_senha %>" required>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 casa">
 					<img src="images/casas/stark.png" alt=""><br>
-					<input type="radio" id="casa" name="casa" value="Stark">Stark
+					<input type="radio" id="usu_casa" name="usu_casa" value="Stark">Stark
 				</div>
 
 				<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 casa">
 					<img src="images/casas/lannister.png" alt=""><br>
-					<input type="radio" id="casa" name="casa" value="Lannister">Lannister
+					<input type="radio" id="usu_casa" name="usu_casa" value="Lannister">Lannister
 				</div>
 
 				<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 casa">
 					<img src="images/casas/baratheon.png" alt=""><br>
-					<input type="radio" id="casa" name="casa" value="Baratheon">Baratheon
+					<input type="radio" id="usu_casa" name="usu_casa" value="Baratheon">Baratheon
 				</div>
 
 				<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 casa">
 					<img src="images/casas/targaryen.png" alt=""><br>
-					<input type="radio" id="casa" name="casa" value="Targaryen">Targaryen
+					<input type="radio" id="usu_casa" name="usu_casa" value="Targaryen">Targaryen
 				</div>
 
 				<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 casa">
 					<img src="images/casas/greyjoy.png" alt=""><br>
-					<input type="radio" id="casa" name="casa" value="Greyjoy">Greyjoy
+					<input type="radio" id="usu_casa" name="usu_casa" value="Greyjoy">Greyjoy
 				</div>
 
 				<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 casa">
 					<img src="images/casas/tully.png" alt=""><br>
-					<input type="radio" id="casa" name="casa" value="Tully">Tully
+					<input type="radio" id="usu_casa" name="usu_casa" value="Tully">Tully
 				</div>
 			
 				<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 casa">
 					<img src="images/casas/martell.png" alt=""><br>
-					<input type="radio" id="casa" name="casa" value="Martell">Martell
+					<input type="radio" id="usu_casa" name="usu_casa" value="Martell">Martell
 				</div>
 
 				<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 casa">
 					<img src="images/casas/tyrell.png" alt=""><br>
-					<input type="radio" id="casa" name="casa" value="Tyrell">Tyrell
+					<input type="radio" id="usu_casa" name="usu_casa" value="Tyrell">Tyrell
 				</div>
 			</div>
 			
