--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,12 +7,23 @@
 	
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<form action="" class="navbar-form navbar-right">
-				<input type="text" class="form-control" id="usu_usuario" name="usu_usuario" placeholder="Usuário" required>
-				<input type="password" class="form-control" id="usu_senha" name="usu_senha" placeholder="Senha" required>
-				<button type="submit" class="btn btn-success">Entrar</button>
-				<button type="submit" class="btn btn-info">Cadastrar</button>
-			</form>
+			 <div class="navbar-header">
+			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#form-login" aria-expanded="false">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </button>
+    		</div>
+
+    		 <div class="collapse navbar-collapse" id="form-login">
+				<form action="/entrar" method="POST" class="navbar-form navbar-right">
+					<input type="text" class="form-control" id="usu_usuario" name="usu_usuario" placeholder="Usuário" required>
+					<input type="password" class="form-control" id="usu_senha" name="usu_senha" placeholder="Senha" required>
+					<button type="submit" class="btn btn-success">Entrar</button>
+				</form>
+			</div>
+
 		</div>
 	</nav>
 
