--- a/public/sass/modules/index.scss
+++ b/public/sass/modules/index.scss
@@ -1,28 +1,33 @@
-*{
-	margin:0;
-	padding:0;
-	@include box-sizing(border-box);
-	@include box-sizing(padding-box);
-}
-
-body, html{
-	width:100%;
-	height: 100%;
-}
+/*  __________________INDEX__________________ */
 
 .body-login{
 	overflow:hidden;
 	background:#060606;
 }
 
-.navbar-inverse{
-	background:$cor-primaria;
-	margin:0;
-}
-
 .imagem-fundo{
-	margin:100px auto;
-	width:846px;
-	height:437px;
-	background:url('../images/logo.png') no-repeat center center;
+	@media (min-width:768px){
+		border:#CC2626 solid 1px;	
+		width:840px;
+		height:380px;
+		background:url('../images/login/got-md.png') no-repeat center;
+	}
+
+	@media (max-width:768px){
+		border:#FFFFFF solid 1px;
+		width:650px;
+		height:294px;
+		background:url('../images/login/got-sm.png') no-repeat center;
+	}
+	
+	
+	@media (max-width:400px){
+		margin:75px auto;
+		border:#0DE951 solid 1px;
+		width:310px;
+		height:140px;
+		background:url('../images/login/got-xs.png') no-repeat center center;
+	}
+
+	
 }
