--- a/public/sass/modules/tela-jogo.scss
+++ b/public/sass/modules/tela-jogo.scss
@@ -1,11 +1,24 @@
+/*  __________________JOGO__________________ */
+
 
 .body-jogo{
 	background-image: url('../images/mapa.png');
 	background-position: center;
 }
 
+
+
 .casa{
-	margin:25px auto;
+	@media (max-width:768px){
+		margin-left:auto;
+		margin-right:auto;
+		margin-top:15px;
+		position:relative;
+	}
+
+	@media (min-width:769px){
+		margin:25px auto;
+	}
 }
 
 
