--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -3,6 +3,7 @@
 @import "compass/utilities/sprites";
 
 @import "helpers/variaveis";
+@import "helpers/keyframes";
 
 @import "modules/style";
 @import "modules/navbar";
