--- a/public/sass/modules/index.scss
+++ b/public/sass/modules/index.scss
@@ -5,19 +5,38 @@
 	background:#060606;
 }
 
+.erros-login{
+	position:absolute;
+	width:250px;
+	height:auto;
+	right:0;
+	margin:15px 0;	
+	padding:15px;
+	background:#D22020;
+	border-radius:3px;
+	color:#FFF;
+	-webkit-animation:mensagemErro 300ms linear;
+    animation: mensagemErro 300ms linear;
+
+	h1{
+		font-weight: bold;
+		margin:7px 0;
+	}
+}
+
 .imagem-fundo{
 	@media (min-width:768px){
-		border:#CC2626 solid 1px;	
+		margin:100px auto;
 		width:840px;
 		height:380px;
-		background:url('../images/login/got-md.png') no-repeat center;
+		background:url('../images/login/got-md.png') no-repeat;
 	}
 
 	@media (max-width:768px){
 		border:#FFFFFF solid 1px;
 		width:650px;
 		height:294px;
-		background:url('../images/login/got-sm.png') no-repeat center;
+		background:url('../images/login/got-sm.png') no-repeat;
 	}
 	
 	
@@ -26,7 +45,7 @@
 		border:#0DE951 solid 1px;
 		width:310px;
 		height:140px;
-		background:url('../images/login/got-xs.png') no-repeat center center;
+		background:url('../images/login/got-xs.png') no-repeat;
 	}
 
 	
