--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -54,6 +54,28 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
+@keyframes mensagemErro {
+  0% {
+    transform: translate(250px, 0);
+    opacity: 0;
+    offset: 0;
+  }
+  25% {
+    transform: translate(150px, 0);
+    opacity: 0.6;
+    offset: 0.6;
+  }
+  50% {
+    transform: translate(50px, 0);
+    opacity: 0.8;
+    offset: 0.8;
+  }
+  100% {
+    transform: translate(0, 0);
+    opacity: 1;
+    offset: 1;
+  }
+}
 /* STYLE - ESTILOS GERAIS */
 * {
   margin: 0;
@@ -103,12 +125,30 @@ body {
   background: #060606;
 }
 
+.erros-login {
+  position: absolute;
+  width: 250px;
+  height: auto;
+  right: 0;
+  margin: 15px 0;
+  padding: 15px;
+  background: #D22020;
+  border-radius: 3px;
+  color: #FFF;
+  -webkit-animation: mensagemErro 300ms linear;
+  animation: mensagemErro 300ms linear;
+}
+.erros-login h1 {
+  font-weight: bold;
+  margin: 7px 0;
+}
+
 @media (min-width: 768px) {
   .imagem-fundo {
-    border: #CC2626 solid 1px;
+    margin: 100px auto;
     width: 840px;
     height: 380px;
-    background: url("../images/login/got-md.png") no-repeat center;
+    background: url("../images/login/got-md.png") no-repeat;
   }
 }
 @media (max-width: 768px) {
@@ -116,7 +156,7 @@ body {
     border: #FFFFFF solid 1px;
     width: 650px;
     height: 294px;
-    background: url("../images/login/got-sm.png") no-repeat center;
+    background: url("../images/login/got-sm.png") no-repeat;
   }
 }
 @media (max-width: 400px) {
@@ -125,7 +165,7 @@ body {
     border: #0DE951 solid 1px;
     width: 310px;
     height: 140px;
-    background: url("../images/login/got-xs.png") no-repeat center center;
+    background: url("../images/login/got-xs.png") no-repeat;
   }
 }
 
