--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -8,4 +8,5 @@
 	<link rel="stylesheet" href="stylesheets/screen.css">
 	<script src="components/jquery/dist/jquery.min.js"></script>
 	<script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="javascripts/slick.min.js"></script>
 </head>
