--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -4,6 +4,7 @@
 
 @import "helpers/variaveis";
 @import "helpers/keyframes";
+@import "helpers/slick";
 
 @import "modules/style";
 @import "modules/navbar";
