--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -9,4 +9,5 @@
 	<script src="components/jquery/dist/jquery.min.js"></script>
 	<script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="javascripts/slick.min.js"></script>
+	<script src="javascripts/scripts.js"></script>
 </head>
