--- a/public/sass/modules/tela-jogo.scss
+++ b/public/sass/modules/tela-jogo.scss
@@ -6,44 +6,59 @@
 	background-position: center;
 }
 
-
+#btn-sair{
+	margin:7px;
+}
 
 .casa{
-	@media (max-width:768px){
-		margin-left:auto;
-		margin-right:auto;
-		margin-top:15px;
-		position:relative;
+	@media (max-width:767px){
+		img{
+			display:block;
+			margin:10px auto 15px auto;
+		}
 	}
 
-	@media (min-width:769px){
+	@media (min-width:768px){
 		margin:25px auto;
 	}
 }
 
-
 .barra-superior{
-	width:auto;
-	height:auto;
-	min-height:90px;
-	padding:10px;
-	margin:50px auto;
 	background:rgba(0, 0, 0, 0.6);
 	text-align:center;
 
 	span{
 		color:#FFF;
 		display: block;
-		width: 100%;
+		width:100%;
 		font-weight: bold;
+	}
+
+	@media (min-width:768px){
+		min-height:90px;	
+		padding:10px;
+		margin:50px 0;
+	}
+
+	@media (max-width:767px) and (orientation:portrait){
+		min-height:55px;
+		padding:7px;
+		margin:0 auto;	
+	}
+
+	@media (max-width:767px) and (orientation:landscape){
+		min-height:50px;
+		padding:5px;
+		margin:0 auto;	
 	}
 }
 
 .barra-inferior{
 	width:100%;
 	height:auto;
-	padding:10px;
+	padding:7px;
 	position:absolute;
+	text-align:center;
 	bottom:0;
 	background:$cor-primaria;
 
