--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -5,6 +5,7 @@
 @import "helpers/variaveis";
 @import "helpers/keyframes";
 @import "helpers/slick";
+@import "helpers/slick-theme";
 
 @import "modules/style";
 @import "modules/navbar";
@@ -12,3 +13,4 @@
 @import "modules/cadastro";
 @import "modules/tela-jogo";
 @import "modules/error";
+
