--- a/public/sass/modules/style.scss
+++ b/public/sass/modules/style.scss
@@ -1,5 +1,4 @@
 /* STYLE - ESTILOS GERAIS */
-
 *{
 	margin:0;
 	padding:0;
@@ -9,7 +8,8 @@
 
 body, html{
 	width:100%;
-	height: 100%;
+	min-height:100%;
+	height:100%;
 }
 
 body{
