--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -167,6 +168,158 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: none;
 }
 
+/* Slider */
+.slick-loading .slick-list {
+  background: #fff url('/public/images/../../fonts/ajax-loader.gif') center center no-repeat;
+}
+
+/* Icons */
+@font-face {
+  font-family: "slick";
+  src: url('/fonts/../../fonts/slick.eot');
+  src: url('/fonts/../../fonts/slick.eot?#iefix') format("embedded-opentype"), url('/fonts/slick.woff') format("woff"), url('/fonts/../../fonts/slick.ttf') format("truetype"), url('/fonts/../../fonts/slick.svg#slick') format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* Arrows */
+.slick-prev,
+.slick-next {
+  position: absolute;
+  display: block;
+  height: 20px;
+  width: 20px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  background: transparent;
+  color: transparent;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  padding: 0;
+  border: none;
+  outline: none;
+}
+.slick-prev:hover, .slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+  outline: none;
+  background: transparent;
+  color: transparent;
+}
+.slick-prev:hover:before, .slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before {
+  opacity: 1;
+}
+.slick-prev.slick-disabled:before,
+.slick-next.slick-disabled:before {
+  opacity: 0.25;
+}
+.slick-prev:before,
+.slick-next:before {
+  font-family: "slick";
+  font-size: 20px;
+  line-height: 1;
+  color: white;
+  opacity: 0.75;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-prev {
+  left: -25px;
+}
+[dir="rtl"] .slick-prev {
+  left: auto;
+  right: -25px;
+}
+.slick-prev:before {
+  content: "←";
+}
+[dir="rtl"] .slick-prev:before {
+  content: "→";
+}
+
+.slick-next {
+  right: -25px;
+}
+[dir="rtl"] .slick-next {
+  left: -25px;
+  right: auto;
+}
+.slick-next:before {
+  content: "→";
+}
+[dir="rtl"] .slick-next:before {
+  content: "←";
+}
+
+/* Dots */
+.slick-dotted.slick-slider {
+  margin-bottom: 30px;
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+.slick-dots li button {
+  border: 0;
+  background: transparent;
+  display: block;
+  height: 20px;
+  width: 20px;
+  outline: none;
+  line-height: 0px;
+  font-size: 0px;
+  color: transparent;
+  padding: 5px;
+  cursor: pointer;
+}
+.slick-dots li button:hover, .slick-dots li button:focus {
+  outline: none;
+}
+.slick-dots li button:hover:before, .slick-dots li button:focus:before {
+  opacity: 1;
+}
+.slick-dots li button:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "•";
+  width: 20px;
+  height: 20px;
+  font-family: "slick";
+  font-size: 6px;
+  line-height: 20px;
+  text-align: center;
+  color: black;
+  opacity: 0.25;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.slick-dots li.slick-active button:before {
+  color: black;
+  opacity: 0.75;
+}
+
 /* STYLE - ESTILOS GERAIS */
 * {
   margin: 0;
@@ -181,6 +334,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 body, html {
   width: 100%;
+  min-height: 100%;
   height: 100%;
 }
 
@@ -266,10 +420,24 @@ body {
   background: #060606;
 }
 
-.page-header h1 {
+.page-header {
   text-align: center;
   color: #FFF;
-  font-size: 3em;
+}
+@media (min-width: 768px) {
+  .page-header h1 {
+    font-size: 3em;
+  }
+}
+@media (max-width: 768px) {
+  .page-header h1 {
+    font-size: 1.5em;
+  }
+}
+
+.check {
+  opacity: 0.3;
+  color: #121212;
 }
 
 .erros {
@@ -296,12 +464,12 @@ body {
   font-weight: bold;
   margin: 30px auto;
   text-align: center;
+  outline: none;
 }
 .form-cadastro .casa img {
   margin: 0 auto;
 }
 .form-cadastro .btn-cadastro {
-  margin-top: 50px;
   margin-bottom: 100px;
 }
 .form-cadastro .btn-cadastro .btn {
@@ -329,12 +497,42 @@ body {
 }
 @media (min-width: 768px) {
   .casa {
+    padding: 0;
+  }
+  .casa img {
+    display: block;
     margin: 25px auto;
+  }
+}
+.casa .usuario {
+  background: rgba(0, 0, 0, 0.7);
+  text-align: center;
+}
+@media (max-width: 767px) {
+  .casa .usuario {
+    width: auto;
+    padding: 5px 15px;
+    margin: 5px auto;
+  }
+  .casa .usuario p {
+    color: #FFF;
+    font-size: 1em;
+    font-weight: bold;
+  }
+}
+@media (min-width: 768px) {
+  .casa .usuario {
+    padding: 7px;
+  }
+  .casa .usuario p {
+    color: #FFF;
+    font-size: 1.5em;
+    font-weight: bold;
   }
 }
 
 .barra-superior {
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.7);
   text-align: center;
 }
 .barra-superior span {
@@ -347,7 +545,7 @@ body {
   .barra-superior {
     min-height: 90px;
     padding: 10px;
-    margin: 50px 0;
+    margin: 50px 0 25px 0;
   }
 }
 @media (max-width: 767px) and (orientation: portrait) {
@@ -356,6 +554,9 @@ body {
     padding: 7px;
     margin: 0 auto;
   }
+  .barra-superior span {
+    font-size: 0.8em;
+  }
 }
 @media (max-width: 767px) and (orientation: landscape) {
   .barra-superior {
@@ -363,6 +564,85 @@ body {
     padding: 5px;
     margin: 0 auto;
   }
+  .barra-superior span {
+    font-size: 0.8em;
+  }
+}
+
+.acoes-mobile {
+  position: absolute;
+  z-index: 1;
+  display: none;
+  min-height: 100%;
+  color: #FFF;
+  text-align: center;
+  background: #272727;
+}
+.acoes-mobile .fechar a {
+  color: #FFF;
+  font-size: 1.4em;
+  font-weight: bold;
+  margin: 0 20px;
+  text-decoration: none;
+}
+.acoes-mobile .pergaminhos {
+  width: 100%;
+  height: auto;
+  margin-top: 60px;
+  padding: 15px;
+}
+.acoes-mobile .suditos {
+  width: 100%;
+  height: auto;
+  margin-top: 60px;
+  padding: 15px;
+}
+.acoes-mobile .suditos .form-cadastro {
+  width: 100%;
+}
+.acoes-mobile .suditos .form-cadastro .form-control {
+  margin: 7px auto;
+}
+.acoes-mobile ul {
+  margin: 15px 0;
+}
+.acoes-mobile ul li {
+  margin: 7px 0;
+}
+.acoes-mobile h3 {
+  font-size: 1.2em;
+  text-align: center;
+}
+.acoes-mobile p {
+  font-size: 1em;
+}
+
+.acoes {
+  display: none;
+  background: rgba(0, 0, 0, 0.7);
+  color: #FFF;
+  height: auto;
+  padding: 15px;
+}
+.acoes .fechar a {
+  color: #FFF;
+  font-size: 1.4em;
+  font-weight: bold;
+  margin: 0 20px;
+  text-decoration: none;
+}
+.acoes ul {
+  margin: 15px 0;
+}
+.acoes ul li {
+  margin: 7px 0;
+}
+.acoes h3 {
+  font-size: 1.2em;
+  text-align: center;
+}
+.acoes p {
+  font-size: 1em;
 }
 
 .barra-inferior {
@@ -370,6 +650,7 @@ body {
   height: auto;
   padding: 7px;
   position: absolute;
+  z-index: 2;
   text-align: center;
   bottom: 0;
   background: #272727;
@@ -377,6 +658,9 @@ body {
 .barra-inferior span {
   color: #FFF;
   font-weight: bold;
+}
+.barra-inferior .itens {
+  width: auto;
 }
 
 .error {
