Desenvolvimento de todas as funcionalidades do jogo

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -28,8 +28,8 @@
 	</nav>
 	
 	<% if(validacao.length > 0){ %>
-		<div class="erros-login">
-			<h1>Erros</h1> 
+		<div class="msg-erro">
+			<h1>Erro</h1> 
 				<ul>
 					<% validacao.forEach(function(erro){ %>
 	  					<li><%= erro.msg %></li>
