--- a/app/views/cadastro.ejs
+++ b/app/views/cadastro.ejs
@@ -14,7 +14,7 @@
 	</nav>
 	
 	<% if(validacao.length > 0){ %>
-		<div class="erros-login">
+		<div class="msg-erro">
 			<h1>Atenção!</h1>
 			<ul>
 				<% validacao.forEach(function(erro){ %>
@@ -25,7 +25,7 @@
 	<% } %>
 
 	<% if(usuario.length > 0){ %>
-		<div class="erros-login">
+		<div class="msg-sucesso">
 			<h1>Atenção!</h1>
 			<p><%= usuario %></p>
 		</div>
@@ -40,7 +40,7 @@
 		<form action="/cadastrar" method="POST" class="form-cadastro">
 			<div class="row">
 				<div class="col-lg-12 cadastro">
-					<input type="text" class="form-control" id="usu_nome" name="usu_nome" placeholder="Nome" value="<%= dados.usu_nome %>">
+					<input type="text" class="form-control" id="usu_nome" name="usu_nome" placeholder="Nome" value="<%= dados.usu_nome %>" required>
 				</div>
 
 				<div class="col-lg-12 cadastro">
