--- a/app/views/suditos.ejs
+++ b/app/views/suditos.ejs
@@ -1,6 +1,6 @@
 <section class="suditos">				
 	<div class="row col-x-12 fechar">
-		<a href="" class="pull-right">X</a>
+		<a href="/jogo" class="pull-right">X</a>
 	</div>	
 	
 	<h3>Súditos</h3>	
@@ -11,27 +11,28 @@
 				<div>
 					<select class="form-control" name="acao">
 						<option value="">Escolha a ação</option>
-						<option value="1">Coletar recursos (2G e 1H)</option>
-						<option value="1">Enforcar aldeão (3G e 2H)</option>
-						<option value="1">Ensinar história (1G e 5H)</option>
-						<option value="1">Ensinar magia (1G e 5H)</option>
+						<option value="1">Coletar recursos (2 moedas - 1 hora)</option>
+						<option value="2">Ensinar história(3 moedas - 2 horas)</option>
+						<option value="3">Treinar ataque(4 moedas - 5 horas)</option>
+						<option value="4">Treinar defesa(4 moedas - 5 horas)</option>
+						<option value="5">Ensinar magia(5 moedas - 10 horas)</option>
 					</select>										
 				</div>
 			</div>			
 			<div class="col-lg-4">
 				<div class="form-group">
-					<input type="number" class="form-control" name="quantidade" id="quantidade" placeholder="Quantidade">									
+					<input type="number" class="form-control" min="1" max="10" name="quantidade" id="quantidade" placeholder="Quantidade aldeões">									
 				</div>
 			</div>			
 			<div class="col-lg-2">
 				<div class="form-group row">
-					<button type="submit" class="center-block btn btn-primary">Ordenar</button>
+					<button type="submit" id="ordenar-acao" class="center-block btn btn-primary">Ordenar</button>
 				</div>
 			</div>			
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				<p>Senhor, você possui 8 súditos desocupados e 2 em atividade.</p>
+				<p>Senhor, você possui 8 aldeões desocupados e 2 em atividade.</p>
 			</div>
 		</div>
 	</form>
