--- a/public/sass/helpers/keyframes.scss
+++ b/public/sass/helpers/keyframes.scss
@@ -1,22 +1,23 @@
-@keyframes mensagemErro{
+@keyframes msg{
 	0%{
 		transform:translate(250px,0);
-		opacity:0;
-		offset:0;
+		opacity:1;
+		offset:0.1;
 	}
-	25%{
-		transform:translate(150px,0);
-		opacity:0.6;
-		offset:0.6;
-	}
-	50%{
-		transform:translate(50px,0);
-		opacity:0.8;
-		offset:0.8;
-	}
-	100%{
+	10%{
 		transform:translate(0,0);
 		opacity:1;
+		offset:0.2;
+	}
+	90%{
+		transform:translate(0,0);
+		opacity:1;
+		offset:0.9;
+	}
+	100%{
+		transform:translate(250px,0);
+		opacity:0;
 		offset:1;
 	}
 }
+
